--- a/assets/sass/universal/_utility.scss
+++ b/assets/sass/universal/_utility.scss
@@ -1,3 +1,7 @@
+body {
+	// position: relative;
+}
+
 .centered {
 	text-align: center;
 }
